--- a/git.html
+++ b/git.html
@@ -10,6 +10,8 @@
 <body>
     This is for demo purposes to better learn git, using git init; git add; git rm --cache; git status
     <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./samp1/app1.js"></script>
+    <script type="text/javascript" src="./samp2/app2.js"></script>
 </body>
 
 </html>
