created additional branch and merged

--- a/git.html
+++ b/git.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    This is for demo purposes to better learn git, using git init; git add; git rm --cache; git status
+    This is for demo purposes to better learn git, using git init; git add; git rm --cache; git status adding Login Form
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./samp1/app1.js"></script>
     <script type="text/javascript" src="./samp2/app2.js"></script>
